Fix layout issue

--- a/orquestra/static/orquestra.css
+++ b/orquestra/static/orquestra.css
@@ -367,7 +367,8 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 #top-menu{
-	margin-top: 13px;
+	padding-top: 13px;
+	background-color: #f1f4f5;
 }
 
 .ui.vertical.menu .item > .menu {
